--- a/phones.html
+++ b/phones.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <title>Electronic Shop</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
     <script defer src="https://use.fontawesome.com/releases/v5.12.1/js/all.js"></script>
 </head>
 <body>
 <nav class="navbar fixed-top navbar-expand-md bg-primary">
     <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-            <img src="../img/Logo.png" alt="Electronic Shop">
+            <img src="Logo.png" alt="Electronic Shop">
         </a>
 
         <button class="navbar-toggler" type="button"
@@ -65,7 +65,7 @@
                     </div>
                     <div id="collapseIphone" class="collapse show" data-parent="#accordeon">
                         <img class="card-img-top img-fluid d-block w-100"
-                             src="../img/iphone-11-pro-spacegrijs.jpg"
+                             src="iphone-11-pro-spacegrijs.jpg"
                              alt="iPhone 11 Pro">
                         <div class="card-body">
                             <div class="row">
@@ -110,7 +110,7 @@
                     </div>
                     <div id="collapseSamsung" class="collapse" data-parent="#accordeon">
                         <img class="card-img-top img-fluid d-block w-100"
-                             src="../img/S20-grijs.jpg"
+                             src="S20-grijs.jpg"
                              alt="Samsung Galaxy S20">
                         <div class="card-body">
                             <div class="row">
@@ -155,7 +155,7 @@
                     </div>
                     <div id="collapseHuawei" class="collapse" data-parent="#accordeon">
                         <img class="card-img-top img-fluid d-block w-100"
-                             src="../img/Huawei.jpg"
+                             src="Huawei.jpg"
                              alt="Huawei P30 Pro">
                         <div class="card-body">
                             <div class="row">
@@ -208,7 +208,7 @@
         </div>
     </div>
 </footer>
-<script src="../js/jquery-3.2.1.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
+<script src="jquery-3.2.1.min.js"></script>
+<script src="bootstrap.min.js"></script>
 </body>
 </html>
