--- a/about.html
+++ b/about.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <title>Electronic Shop</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
     <script defer src="https://use.fontawesome.com/releases/v5.12.1/js/all.js"></script>
 </head>
 <body>
 <nav class="navbar fixed-top navbar-expand-md bg-primary">
     <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-            <img src="../img/Logo.png" alt="Electronic Shop">
+            <img src="Logo.png" alt="Electronic Shop">
         </a>
 
         <button class="navbar-toggler" type="button"
@@ -149,7 +149,7 @@
         </div>
     </div>
 </footer>
-<script src="../js/jquery-3.2.1.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
+<script src="jquery-3.2.1.min.js"></script>
+<script src="bootstrap.min.js"></script>
 </body>
 </html>
