--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Electronic Shop</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
     <script defer src="https://use.fontawesome.com/releases/v5.12.1/js/all.js"></script>
 </head>
 <body>
@@ -13,7 +13,7 @@
 <nav class="navbar fixed-top navbar-expand-md bg-primary">
     <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-            <img src="../img/Logo.png" alt="Electronic Shop">
+            <img src="Logo.png" alt="Electronic Shop">
         </a>
 
         <button class="navbar-toggler" type="button"
@@ -114,7 +114,7 @@
                     <div class="card">
                         <div class="card-body text-center">
                             <h4 class="card-title mt-3 mb-2">Apple iPhone 11 Pro</h4>
-                            <img class="card-img img-fluid d-block w-100" src="../img/iphone11.jpg" alt="iPhone 11">
+                            <img class="card-img img-fluid d-block w-100" src="iphone11.jpg" alt="iPhone 11">
                             <button class="btn btn-success mt-2 mb-3" type="button">
                                 € 1.159,00
                             </button>
@@ -125,7 +125,7 @@
                     <div class="card">
                         <div class="card-body text-center">
                             <h4 class="card-title mt-3 mb-2">Samsung Galaxy S20</h4>
-                            <img class="card-img img-fluid d-block w-100" src="../img/S20-grijs.jpg" alt="Samsung S20">
+                            <img class="card-img img-fluid d-block w-100" src="S20-grijs.jpg" alt="Samsung S20">
                             <button class="btn btn-success mt-2 mb-3" type="button">
                                 € 899,00
                             </button>
@@ -136,7 +136,7 @@
                     <div class="card">
                         <div class="card-body text-center">
                             <h4 class="card-title mt-3 mb-2">Huawei P30 Pro</h4>
-                            <img class="card-img img-fluid d-block w-100" src="../img/Huawei.jpg" alt="Huawei P30 Pro">
+                            <img class="card-img img-fluid d-block w-100" src="Huawei.jpg" alt="Huawei P30 Pro">
                             <button class="btn btn-success mt-2 mb-3" type="button">
                                 € 799,00
                             </button>
@@ -147,7 +147,7 @@
                     <div class="card">
                         <div class="card-body text-center">
                             <h4 class="card-title mt-3 mb-2">Apple iPad Pro</h4>
-                            <img class="card-img img-fluid d-block w-100" src="../img/apple-ipad-pro.jpeg"
+                            <img class="card-img img-fluid d-block w-100" src="apple-ipad-pro.jpeg"
                                  alt="iPad Pro">
                             <button class="btn btn-success mt-2 mb-3" type="button">
                                 € 899,00
@@ -159,7 +159,7 @@
                     <div class="card">
                         <div class="card-body text-center">
                             <h4 class="card-title mt-3 mb-2">Samsung Galaxy Tab S6</h4>
-                            <img class="card-img img-fluid d-block w-100" src="../img/Tab-S6-1.jpg"
+                            <img class="card-img img-fluid d-block w-100" src="Tab-S6-1.jpg"
                                  alt="Samsung Galaxy Tab S6">
                             <button class="btn btn-success mt-2 mb-3" type="button">
                                 € 699,00
@@ -171,7 +171,7 @@
                     <div class="card">
                         <div class="card-body text-center">
                             <h4 class="card-title mt-3 mb-2">Huawei MatePad Pro</h4>
-                            <img class="card-img img-fluid d-block w-100" src="../img/MatePad-Pro.jpg"
+                            <img class="card-img img-fluid d-block w-100" src="MatePad-Pro.jpg"
                                  alt="Huawei MatePad Pro">
                             <button class="btn btn-success mt-2 mb-3" type="button">
                                 € 699,00
@@ -183,7 +183,7 @@
                     <div class="card mb-lg-5">
                         <div class="card-body text-center">
                             <h4 class="card-title mt-3 mb-2">Apple MacBook Pro 16</h4>
-                            <img class="card-img img-fluid d-block w-100" src="../img/16-inch-macbook-pro.jpg"
+                            <img class="card-img img-fluid d-block w-100" src="16-inch-macbook-pro.jpg"
                                  alt="Apple MacBook Pro 16">
                             <button class="btn btn-success mt-2 mb-3" type="button">
                                 € 1.299,00
@@ -195,7 +195,7 @@
                     <div class="card mb-lg-5">
                         <div class="card-body text-center">
                             <h4 class="card-title mt-3 mb-2">Razer Blade 15</h4>
-                            <img class="card-img img-fluid d-block w-100" src="../img/razer-blade.jpeg"
+                            <img class="card-img img-fluid d-block w-100" src="razer-blade.jpeg"
                                  alt="Razer Blade 15">
                             <button class="btn btn-success mt-2 mb-3" type="button">
                                 € 1.899,00
@@ -207,7 +207,7 @@
                     <div class="card mb-5">
                         <div class="card-body text-center">
                             <h4 class="card-title mt-3 mb-2">Google Pixelbook Go</h4>
-                            <img class="card-img img-fluid d-block w-100" src="../img/Pixelbook-Go.jpg"
+                            <img class="card-img img-fluid d-block w-100" src="Pixelbook-Go.jpg"
                                  alt="Google Pixelbook Go">
                             <button class="btn btn-success mt-2 mb-3" type="button">
                                 € 649,00
@@ -234,19 +234,19 @@
                     <div id="carouselBestSeller" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img class="d-block w-100 img-fluid" src="../img/S20-grijs.jpg" alt="Samsung Galaxy S20 Grey">
+                                <img class="d-block w-100 img-fluid" src="S20-grijs.jpg" alt="Samsung Galaxy S20 Grey">
                                 <div class="carousel-caption d-md-block">
                                     <p class="text-color-white">Samsung Galaxy S20 Grey</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100 img-fluid" src="../img/S20-roos.jpg" alt="Samsung Galaxy S20 Pink">
+                                <img class="d-block w-100 img-fluid" src="S20-roos.jpg" alt="Samsung Galaxy S20 Pink">
                                 <div class="carousel-caption d-md-block">
                                     <p class="text-color-white">Samsung Galaxy S20 Pink</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100 img-fluid" src="../img/S20-blauw.jpg" alt="Samsung Galaxy S20 Blue">
+                                <img class="d-block w-100 img-fluid" src="S20-blauw.jpg" alt="Samsung Galaxy S20 Blue">
                                 <div class="carousel-caption d-md-block">
                                     <p class="text-color-black">Samsung Galaxy S20 Blue</p>
                                 </div>
@@ -293,7 +293,7 @@
     </div>
 </footer>
 
-<script src="../js/jquery-3.2.1.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
+<script src="jquery-3.2.1.min.js"></script>
+<script src="bootstrap.min.js"></script>
 </body>
 </html>
