--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <p class="lead mt-4">The <span class="font-weight-bold">best</span> electronic shop in the world!</p>
             </div>
             <div class="col-md-6 kernpunten">
-                <div class="row mt-4 mt-md-4">
+                <div class="row mt-md-4">
                     <div class="col">
                         <span class="font-weight-bold badge badge-success float-md-right">Best quality!</span>
                     </div>
